# rust-duckdb-excel-lab

./: .gitignore  Cargo.toml  README.md
data/: response_times.xlsx
src/: lib.rs  main.rs
tests/: integration_test.rs
